# py_justiceadmin

./: CITATION.cff  README.md  patterns.py  pyproject.toml  test.py
.github/workflows/: publish.yml
src/py_justice_administrative/: api.py  classes.py  enums.py  exceptions.py
src/py_justiceadmin/: __init__.py  api.py  classes.py  classes_params.py
src/py_justiceadmin/classes/: __init__.py  class_function.py  classes.py  classes_params.py
tests/: simple_test.py
