[project]
name = "py-justiceadmin"
version = "0.2.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Geminy3", email = "aljo.m@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.3",
    "unidecode>=1.4.0",
]

[project.scripts]
py-justiceadmin = "py_justiceadmin:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
